--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -18,7 +18,7 @@
         {% for task in tasks %}
         <li>
             {{ task.task }}
-            <a href="{{ url_for('delete_task', id=task.id) }}">Delete</a>
+            <a href="{{ url_for('protected.delete_task', id=task.id) }}">Delete</a>
         </li>
         {% endfor %}
     </ul>
